--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyEstatia - CRM Inmobiliario con IA</title>
-    <meta name="description" content="CRM inmobiliario potenciado con IA. Gestiona leads, propiedades e integraciones desde una interfaz simple." />
-    <meta name="author" content="MyEstatia" />
 
-    <meta property="og:title" content="MyEstatia - CRM Inmobiliario con IA" />
-    <meta property="og:description" content="CRM inmobiliario potenciado con IA. Gestiona leads, propiedades e integraciones desde una interfaz simple." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MyEstatia - CRM Inmobiliario con IA</title>
+  <meta name="description"
+    content="CRM inmobiliario potenciado con IA. Gestiona leads, propiedades e integraciones desde una interfaz simple." />
+  <meta name="author" content="MyEstatia" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="MyEstatia - CRM Inmobiliario con IA" />
+  <meta property="og:description"
+    content="CRM inmobiliario potenciado con IA. Gestiona leads, propiedades e integraciones desde una interfaz simple." />
+  <meta property="og:type" content="website" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
